force-app/main/default/objects/UtilityMeterUsage__c/UtilityMeterUsage__c.object-meta.xml
<CustomObject>
    <description>A custom object (created by the Urjanet Connect app) to store utility meter usage data.</description>
    <label>Utility Meter Usage</label>
    <nameField>
        <label>Utility Meter Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utility Meter Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>