force-app/main/default/objects/UtilityMeterUsage__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <description>Account Type : Normal, Sub Account, Summary</description>
    <inlineHelpText>Account Type : Normal, Sub Account, Summary.</inlineHelpText>
    <label>Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>