force-app/main/default/objects/UtilityMeterUsage__c/fields/Arcadia_Statement_Date__c.field-meta.xml
<CustomField>
    <fullName>Arcadia_Statement_Date__c</fullName>
    <description>It is used to store statement date of Meter usage</description>
    <label>Arcadia Statement Date</label>
    <type>Date</type>
</CustomField>