force-app/main/default/objects/UtilityMeterUsage__c/fields/Arcadia_Statement_ID__c.field-meta.xml
<CustomField>
    <fullName>Arcadia_Statement_ID__c</fullName>
    <description>It is used to store the statement Id of meter usage</description>
    <inlineHelpText>Unique ID for the statement on Arcadia system</inlineHelpText>
    <label>Arcadia Statement ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>