force-app/main/default/objects/UtilityMeterUsage__c/fields/CitedUsage__c.field-meta.xml
<CustomField>
    <fullName>CitedUsage__c</fullName>
    <description>This usage is not measured by a meter reading on the current statement.</description>
    <inlineHelpText>This usage is not measured by a meter reading on the current statement.</inlineHelpText>
    <label>Cited Usage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>