force-app/main/default/objects/UtilityMeterUsage__c/fields/ContributionStatus__c.field-meta.xml
<CustomField>
    <fullName>ContributionStatus__c</fullName>
    <description>Non-contributing is not calculated for audits or total charges or total usages.</description>
    <inlineHelpText>Non-contributing is not calculated for audits or total charges or total usages.</inlineHelpText>
    <label>Contribution Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>