force-app/main/default/objects/UtilityMeterUsage__c/fields/CreatedDateInUrjanet__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateInUrjanet__c</fullName>
    <description>The Date when this usage was created in Arcadia&apos;s system.</description>
    <inlineHelpText>The Date when this usage was created in Arcadia&apos;s system.</inlineHelpText>
    <label>Created Date in Arcadia</label>
    <type>DateTime</type>
</CustomField>