force-app/main/default/objects/UtilityMeterUsage__c/fields/DeregulationStatus__c.field-meta.xml
<CustomField>
    <fullName>DeregulationStatus__c</fullName>
    <description>Deregulation Status: supply, delivery, full service.</description>
    <inlineHelpText>Deregulation Status: supply, delivery, full service.</inlineHelpText>
    <label>Deregulation Status </label>
    <length>255</length>
    <type>Text</type>
</CustomField>