force-app/main/default/objects/UtilityMeterUsage__c/fields/IsRecordLocked__c.field-meta.xml
<CustomField>
    <fullName>IsRecordLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record Locked</label>
    <type>Checkbox</type>
</CustomField>