force-app/main/default/objects/UtilityMeterUsage__c/fields/LastModifiedInUrjanet__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedInUrjanet__c</fullName>
    <description>The date that a meter usage was modified last in the Arcadia system.</description>
    <inlineHelpText>The date that a meter was usage modified last in the Arcadia system.</inlineHelpText>
    <label>Last Modified in Arcadia</label>
    <type>DateTime</type>
</CustomField>