force-app/main/default/objects/UtilityMeterUsage__c/fields/Manually_Updated__c.field-meta.xml
<CustomField>
    <fullName>Manually_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when this record is manually Updated.</description>
    <inlineHelpText
    >Indicates if the following fields have been manually updated: "Period Start" , "Period End" , "Usage Unit" , "Measured Usage".
    </inlineHelpText>
    <label>Manually Updated</label>
    <type>Checkbox</type>
</CustomField>