force-app/main/default/objects/UtilityMeterUsage__c/fields/MeasuredUsage__c.field-meta.xml
<CustomField>
    <fullName>MeasuredUsage__c</fullName>
    <description>Represents actual consumption at the meter location.</description>
    <inlineHelpText
    >Represents actual consumption at the meter location. (Editing this field will trigger the "Manually Updated" field for this asset)</inlineHelpText>
    <label>Measured Usage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>