force-app/main/default/objects/UtilityMeterUsage__c/fields/MeasuredUsageInText__c.field-meta.xml
<CustomField>
    <fullName>MeasuredUsageInText__c</fullName>
    <description>Represents actual consumption at the meter location.</description>
    <inlineHelpText>Measured Usage in Text</inlineHelpText>
    <label>Measured Usage In Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>
    