force-app/main/default/objects/UtilityMeterUsage__c/fields/MeasurementType__c.field-meta.xml
<CustomField>
    <fullName>MeasurementType__c</fullName>
    <description>Delivery terms of the tariff: General consumption, demand, bi-directional in, bi-directional out, deduct, deliveries.</description>
    <inlineHelpText>Delivery terms of the tariff: General consumption, demand, bi-directional in, bi-directional out, deduct, deliveries.</inlineHelpText>
    <label>Measurement Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>