force-app/main/default/objects/UtilityMeterUsage__c/fields/PeriodEnd__c.field-meta.xml
<CustomField>
    <fullName>PeriodEnd__c</fullName>
    <description>Date that the billing period ended.</description>
    <inlineHelpText
    >Date that the billing period ended. (Editing this field will trigger the "Manually Updated" field for this asset)</inlineHelpText>
    <label>Period End</label>
    <type>Date</type>
</CustomField>