force-app/main/default/objects/UtilityMeterUsage__c/fields/PeriodStart__c.field-meta.xml
<CustomField>
    <fullName>PeriodStart__c</fullName>
    <description>Date that the billing period started.</description>
    <inlineHelpText
    >Date that the billing period started. (Editing this field will trigger the "Manually Updated" field for this asset)
    </inlineHelpText>
    <label>Period Start</label>
    <type>Date</type>
</CustomField>