force-app/main/default/objects/UtilityMeterUsage__c/fields/To_Be_Ignored__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Ignored__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if an meter usage is to be ignored for downstream data creation (meaning Urjanet is considering the meter usage to be valid).</description>
    <inlineHelpText>Indicates if an meter usage is to be ignored for downstream data creation (meaning Urjanet is considering the meter usage to be valid).</inlineHelpText>
    <label>To Be Ignored</label>
    <type>Checkbox</type>
</CustomField>