force-app/main/default/objects/UtilityMeterUsage__c/fields/UsageUnit__c.field-meta.xml
<CustomField>
    <fullName>UsageUnit__c</fullName>
    <description>The meter’s usage unit of measure.</description>
    <inlineHelpText
    >The meter’s usage unit of measure. (Editing this field will trigger the "Manually Updated" field for this asset)</inlineHelpText>
    <label>Usage Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>