force-app/main/default/objects/UtilityMeterUsage__c/fields/UtilityMeter__c.field-meta.xml
<CustomField>
    <fullName>UtilityMeter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Utility Meter for this Utility Meter Usage record.</description>
    <inlineHelpText>The Utility Meter for this Utility Meter Usage record.</inlineHelpText>
    <label>Utility Meter</label>
    <referenceTo>UtilityMeter__c</referenceTo>
    <relationshipLabel>Utility Meter Usages</relationshipLabel>
    <relationshipName>UtilityMeterUsages</relationshipName>
    <type>Lookup</type>
</CustomField>