force-app/main/default/objects/UtilityMeterUsage__c/validationRules/Lock_the_record.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_the_record</fullName>
    <active>true</active>
    <description>Record will be locked when user selects the checkbox.</description>
    <errorConditionFormula>AND(IsRecordLocked__c, NOT(ISCHANGED(IsRecordLocked__c)))</errorConditionFormula>
    <errorMessage
    >Record is locked, Unlock for updating. If you are unable to unlock please contact your Salesforce Administrator for help.</errorMessage>
</ValidationRule>