force-app/main/default/objects/UtilityMeterUsage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UtilityMeter__c</columns>
    <columns>PeriodStart__c</columns>
    <columns>PeriodEnd__c</columns>
    <columns>CitedUsage__c</columns>
    <columns>MeasuredUsage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>